@@ -29,7 +29,7 @@
     <dependency>
       <groupId>ch.ivyteam.ivy.addons</groupId>
       <artifactId>file-manager-api</artifactId>
-      <version>[7.3,)</version>
+      <version>[7.3.0-SNAPSHOT,)</version>
       <type>iar</type>
     </dependency>
   </dependencies>
